# diffusion2d

./: README.md  pyproject.toml
merklesn_diffusion2d/: diffusion2d.py  output.py
